--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
                         accountants to work with and get the normal reports.</p>
 
                     <h4>What is HesabFun and what does it do?</h4>
-                    <p>HesabFun is a base API accounting system, it's open source and free. you can use HesabFun site
-                        for free or run it under 5 minutes by docker on your company's server.</p>
+                    <p>Hesab-Fun is a base API accounting system, it is open source and free. you can use Hesab-Fun site
+                        for free or run it under 5 minutes by docker on your company's internal server. Hesab-Fun makes
+                        you needless of writing the accounting system that you are busy the developing it, doing the
+                        task work and employee insurance automatically, for its cloud's modality, accountants can
+                        freelance. You can develop your required plugins by using its API. it's not limited to special
+                        language and you can make the plugin with any languages or us it in any platforms. The core of
+                        HesabFun as has made of Golang that made easy to develop and it has also a very good performance
+                        from the website, android app and iPhone and coming soon available on the desktop.</p>
                     <a class="main_btn" href="#">See Details</a>
                 </div>
             </div>
