--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://app.hesabfun.com">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://github.com/hesabfun">Github</a>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -79,28 +79,45 @@
             <div class="col-lg-10 offset-lg-1">
                 <div class="interior_text">
                     <h4>Why we need a base API accounting system?</h4>
-                    <p>Probably you as a developer don't know much about accounting, tax, value-added and…
-                        But as far as we want salary from companies that we work for companies should have income and
-                        us developers develop financial system platforms, I have a lot of problems in this part, for
-                        example When your CTO comes in and says that accounting needs that kind of sale's report and you
-                        had never designed it to get reports easily, Or Worth than that is when you have to export the
+                    <p>Probably you as a developer don’t know much about accounting, tax, value-added, etc. But as far
+                        as we want salary from companies that we work for, companies should have income and us
+                        developers write financial system platforms, we have a lot of problems in this part, for example
+                        when your CTO comes in and says that accounting needs that kind of sale’s report and you had
+                        never designed it to get reports easily, or worth than that is when you have to export the
                         reports, for example in the format of Excel so traditional accounting systems can be imported
-                        once a month. <br>
-                        Or there would be another kind of problem when you want to create something like CRM or
-                        E-commerce for a company that have done all things traditionally, inventory report or the last
-                        list of customers is like a nightmare. these systems don't have any API, just designed for
-                        accountants to work with and get the normal reports.</p>
+                        once a month. or there would be another kind of problem when you want to create something like
+                        CRM or E-commerce for a company that has done all things traditionally, inventory report or the
+                        last list of customers is like a nightmare. these systems don’t have any API, just designed for
+                        accountants to work with and get the daily reports.</p>
 
-                    <h4>What is HesabFun and what does it do?</h4>
+                    <h4>What is Hesab-Fun and what does it do?</h4>
                     <p>Hesab-Fun is a base API accounting system, it is open source and free. you can use Hesab-Fun site
-                        for free or run it under 5 minutes by docker on your company's internal server. Hesab-Fun makes
+                        for free or run it under 5 minutes by docker on your company’s internal server. Hesab-Fun makes
                         you needless of writing the accounting system that you are busy the developing it, doing the
-                        task work and employee insurance automatically, for its cloud's modality, accountants can
-                        freelance. You can develop your required plugins by using its API. it's not limited to special
+                        task work and employee insurance automatically, for its cloud’s modality, accountants can
+                        freelance. You can develop your required plugins by using its API. it’s not limited to special
                         language and you can make the plugin with any languages or us it in any platforms. The core of
                         HesabFun as has made of Golang that made easy to develop and it has also a very good performance
                         from the website, android app and iPhone and coming soon available on the desktop.</p>
-                    <a class="main_btn" href="#">See Details</a>
+
+                    <h4>Where are we now?</h4>
+                    <p>We are developing an alpha version, it’s not stable at the moment it’s better not to use it until
+                        we release version 1 .if you need this project at the moment, you can fork one of the Hesabfun’s
+                        repositories or develop it. we need your help.</p>
+
+                    <h4>Make money through Hesab-Fun!</h4>
+                    <p>Don’t panic, Hesab-Fun is free and it supposes to be free, but you can always make plugins for it
+                        and publish it with any kind of business plan, plugins like ordering the app for capillary
+                        marketing or ordering for cafe and restaurant, E-shop maker, management of chain store, etc. As
+                        we said Hesabfun is a completely flexible platform, it gives you choices to run any ideas unlike
+                        other accounting applications in the market. of course, it’s better waiting for releasing
+                        version 1, presently we are doing a lot of changes and not stable at all.</p>
+
+                    <p>I’m ErFUN, Hesab-Fun’s developer, you can contact me through this email <a href="mailto:erfun@hesabfun.com" target="_blank" >erfun@hesabfun.com</a></p>
+                    <p>GitHub: <a href="https://github.com/hesabFun" target="_blank" >https://github.com/hesabFun</a></p>
+                    <p>Document: <a href="http://docs.hesabfun.com" target="_blank" >http://docs.hesabfun.com</a></p>
+
+                    <!--<a class="main_btn" href="#">See Details</a>-->
                 </div>
             </div>
         </div>
@@ -114,12 +131,11 @@
         <div class="row">
             <div class="col-lg-3  col-md-6 col-sm-6">
                 <div class="single-footer-widget tp_widgets">
-                    <h6 class="footer_title">Top Products</h6>
+                    <h6 class="footer_title">Top Links</h6>
                     <ul class="list">
-                        <li><a href="#">Managed Website</a></li>
-                        <li><a href="#">Manage Reputation</a></li>
-                        <li><a href="#">Power Tools</a></li>
-                        <li><a href="#">Marketing Service</a></li>
+                        <li><a href="https://hesabfun.com">Website</a></li>
+                        <li><a href="https://github.com/hesabFun">GitHub</a></li>
+                        <li><a href="https://docs.hesabfun.com">Documents</a></li>
                     </ul>
                 </div>
             </div>
@@ -134,7 +150,7 @@
                             <div class="input-group d-flex flex-row">
                                 <input name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''"
                                        onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                <button class="btn sub-btn">Get Started</button>
+                                <button class="btn sub-btn" disabled>Get Started</button>
                             </div>
                             <div class="mt-10 info"></div>
                         </form>
