--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class="input-group d-flex flex-row">
                                 <input name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''"
                                        onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                <button class="btn sub-btn" disabled>Get Started</button>
+                                <button class="btn sub-btn" style="right:0px;" disabled>Get Started</button>
                             </div>
                             <div class="mt-10 info"></div>
                         </form>
